// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-iinbLa cwfjym"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
Array [
  <span
    className="sc-iinbLa cwfjym"
  >
    Default color is Bulma
  </span>,
  <span
    className="sc-iinbLa cBllrv"
    color="piccolo.100"
  >
    Piccolo
  </span>,
  <span
    className="sc-iinbLa jBCJEp"
    color="trunks.100"
  >
    Trunks
  </span>,
  <span
    className="sc-iinbLa iYrTmf"
    color="krillin.100"
  >
    Krillin
  </span>,
]
`;

exports[`Caption renders font weights 1`] = `
Array [
  <span
    className="sc-iinbLa cwfjym"
  >
    Default font-weight is bold
  </span>,
  <span
    className="sc-iinbLa eXSTDP"
  >
    Font-weight is regular
  </span>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <span
    className="sc-iinbLa cwfjym"
  >
    Span is a default tag
  </span>,
  <p
    className="sc-iinbLa cwfjym"
  >
    Paragraph tag
  </p>,
  <label
    className="sc-iinbLa cwfjym"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <span
    className="sc-iinbLa cwfjym"
  >
    Default font-size is 10px
  </span>,
  <span
    className="sc-iinbLa fvBMIv"
    size={9}
  >
    Size is 9px
  </span>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <span
    className="sc-iinbLa cwfjym"
  >
    Text-align is not specified
  </span>,
  <span
    className="sc-iinbLa bBbAOl"
  >
    Centered text
  </span>,
  <span
    className="sc-iinbLa dKaUGG"
  >
    Right alignment
  </span>,
]
`;
